tests/machine/x/c/cross_join_filter.error
exit status 1
/workspace/mochi/tests/machine/x/c/cross_join_filter.c: In function ‘_mochi_main’:
/workspace/mochi/tests/machine/x/c/cross_join_filter.c:61:7: error: conflicting types for ‘letters’; have ‘int’
   61 |   int letters = letters;
      |       ^~~~~~~
/workspace/mochi/tests/machine/x/c/cross_join_filter.c:58:15: note: previous definition of ‘letters’ with type ‘list_string’
   58 |   list_string letters = list_string_create(2);
      |               ^~~~~~~
